[tool.poetry]
name = "pymista"
version = "0.1.0"
description = "Control (microscopy) stages using a unified Python interface."
authors = ["Piet J.M. Swinkels <36634689+WetenSchaap@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/WetenSchaap/pymista"

[tool.poetry.dependencies]
python = "^3.9"
pyserial = "^3.5"
ipykernel = { version = "*", optional = true }
zaber-motion = { version = "^6.0.0", optional = true }

[tool.poetry.extras]
zaber = ["zaber-motion"]
test = ["ipykernel"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
